--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,6 @@
     <footer class="footer">
       <p class="footer-text">copyright: Abass Olanrewaju Waiu</p>
     </footer>
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="../dist/bundle.js"></script>
   </body>
 </html>
