--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Book-Store" />
+    <meta name="theme-color" content="#004d40" />
+    <meta name="description" content="Electronic-Bookstore" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" href="./src/img/broken-mirror-sm.png" />
     <title>Document</title>
   </head>
   <body>
@@ -135,5 +142,6 @@
     <footer class="footer">
       <p class="footer-text">copyright: Abass Olanrewaju Waiu</p>
     </footer>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
   </body>
 </html>
