--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Book-Store" />
-    <meta name="theme-color" content="#004d40" />
-    <meta name="description" content="Electronic-Bookstore" />
-    <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" href="./src/img/broken-mirror-sm.png" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png" />
+    <link rel="manifest" href="./img/site.webmanifest" />
+    <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png" />
+
     <title>Document</title>
   </head>
   <body>
