Revert "Setup Webpack"

--- a/index.html
+++ b/index.html
@@ -3,18 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Book-Store" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png" />
-    <link rel="manifest" href="./img/site.webmanifest" />
-    <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#5bbad5" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png" />
-
     <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
   </head>
   <body>
     <header class="header">
@@ -146,6 +137,6 @@
     <footer class="footer">
       <p class="footer-text">copyright: Abass Olanrewaju Waiu</p>
     </footer>
-    <noscript>Please enable JavaScript to continue using this application.</noscript>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
