--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
     <meta name="apple-mobile-web-app-title" content="Book-Store" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+    <meta
+      name="description"
+      content="This is an electronic book-store that store books by their title, author and no, of pages, books can be added and removed."
+    />
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png" />
     <link rel="manifest" href="./img/site.webmanifest" />
