--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="This is an electronic book-store that store books by their title, author and no, of pages, books can be added and removed."
+      content="This is an electronic book-store that store books by their title, author and no, of pages, books can also be added or removed."
     />
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png" />
